environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: one-day-pub-prod
  labels:
    name: one-day-pub-prod
    environment: production
    app.kubernetes.io/part-of: one-day-pub
