environments/prod/api-dns-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kamf-api
spec:
  template:
    spec:
      dnsConfig:
        searches:
        - "kamf-prod.svc.cluster.local"
        - "svc.cluster.local"
        - "cluster.local"
