environments/prod/mysql-hostport-patch.yaml
# MySQL hostPort patch for PROD environment
# Exposes MySQL on host port 13306  
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  template:
    spec:
      containers:
      - name: mysql
        ports:
        - containerPort: 3306
          name: mysql
          hostPort: 13306
